# forge

./: .dockerignore  .env.example  .env.integration.example  .gitignore  .gitleaks.toml  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_READINESS.md  SECURITY.md  SECURITY_FINDINGS.md  conftest.py  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
apps/api/: README.md  pyproject.toml
apps/api/forge_api/: __init__.py  _stubs.py  cli.py  cli_bench.py  cli_cost.py  cli_marketplace.py  cli_replay.py  cli_secrets.py  cli_verify.py  db.py  deps.py  main.py  settings.py
apps/api/forge_api/auth/: __init__.py  apikeys.py  apikeys_db.py  crypto.py  keyring.py  models.py  oauth.py  providers.py  rbac.py  service.py  vault.py  vault_db.py
apps/api/forge_api/authz/: __init__.py  deps.py
apps/api/forge_api/middleware/: __init__.py  idempotency.py  idempotency_db.py  shutdown.py
apps/api/forge_api/observability/: __init__.py  audit.py  audit_db.py  otel.py  redaction.py  service.py  trace.py
apps/api/forge_api/realtime/: __init__.py  broadcaster.py  manager.py  spec_room.py
apps/api/forge_api/routers/: __init__.py  _rbac.py  access.py  agent.py  alerts.py  ao_settings.py  approval.py  approvals.py  attestations.py  audit.py  auth.py  automations.py  benchmarks.py  board.py  cost.py  deployments.py  health.py  incidents.py  integration.py  knowledge.py  marketplace.py  mcp.py  observability.py  oidc.py  pm.py  policy.py  project_access.py  public_leaderboard.py  realtime.py  saml.py  scim.py  spec.py  sprints.py  sso_admin.py  teams.py  workflow.py  workflow_editor.py
apps/api/forge_api/schemas/: __init__.py  ao_settings.py  approvals.py  attestation.py  audit.py  authz.py  automations.py  benchmark.py  cost.py  deployments.py  fork.py  incidents.py  marketplace.py  mcp.py  observability.py  pm.py  policy.py  red_team.py  replay.py  sprint.py
apps/api/forge_api/scripts/: __init__.py  seed.py
apps/api/forge_api/security/: __init__.py  bodylimit.py  headers.py  ratelimit.py  ssrf.py
apps/api/forge_api/services/: __init__.py  ao_settings_service.py  approval_repository_db.py  approval_service.py  attestation_service.py  audit.py  auth_audit.py  auth_provisioning.py  authz_service.py  automation_actions.py  automations.py  benchmark_service.py  cost_service.py  deployment_service.py  fork_service.py  incident_service.py  marketplace_service.py  mcp_index_service.py  observability_analytics_service.py  pm_link_repository.py  pm_link_repository_db.py  pm_service.py  policy_audit_sink_db.py  policy_override_grant_store_db.py  policy_service.py  projection_repository_db.py  projection_service.py  replay_service.py  self_eval_gate.py  self_eval_service.py  spec_draft_service.py  spec_import_service.py  spec_version_service.py  temporal_health.py  workflow_engine.py
apps/api/forge_api/sso/: __init__.py  attribute_mapping.py  config_service.py  errors.py  oidc.py  provisioning.py  replay.py  saml.py  saml_metadata.py  scim_filter.py  scim_models.py  scim_service.py
apps/api/tests/: conftest.py  test_agent_router.py  test_ao_self_eval_gate.py  test_ao_settings_router.py  test_api_ratelimit.py  test_api_skeleton.py  test_apikeys_db.py  test_approval_repository_db.py  test_approval_router.py  test_approvals.py  test_audit_store_db.py  test_auth_agent_token_ttl.py  test_auth_apikeys.py  test_auth_audit_emission.py  test_auth_crypto.py  test_auth_crypto_envelope.py  test_auth_keyring.py  test_auth_oauth.py  test_auth_providers.py  test_auth_provisioning.py  test_auth_rbac.py  test_auth_require_role.py  test_auth_resolve_model_client.py  test_auth_router.py  test_auth_secrets_rotate.py  test_auth_service_key.py  test_auth_session_jwt.py  test_auth_vault.py  test_auth_vault_expiry.py  test_authz_api.py  test_bench_cli.py  test_board_api.py  test_board_tenant_r4.py  test_cli_secrets.py  test_cli_verify.py  test_cost_cli.py  test_graceful_shutdown.py  test_idempotency.py  test_idempotency_store_db.py  test_incidents.py  (+47 more)
apps/api/tests/attest/: test_attestation_api.py  test_attestation_service.py
apps/api/tests/audit/: test_audit_api.py
apps/api/tests/automations/: conftest.py  test_action_wiring.py  test_rbac.py  test_rules_api.py
apps/api/tests/benchmark/: conftest.py  test_benchmark_flow.py  test_benchmark_rbac.py  test_public_leaderboard.py
apps/api/tests/cost/: cost_support.py  test_cost_api.py
apps/api/tests/deployments/: conftest.py  test_auto_promote.py  test_cancel_rbac.py  test_decision.py  test_freeze.py  test_pipeline_crud.py  test_request_and_advance.py
apps/api/tests/integration/: test_github_webhook_live.py  test_mcp_live.py
apps/api/tests/marketplace/: conftest.py  test_marketplace_install.py  test_marketplace_lifecycle.py  test_marketplace_publish.py  test_marketplace_rbac.py
apps/api/tests/pm_api/: conftest.py  test_connections.py  test_rbac.py  test_webhooks.py
apps/mcp-gateway/: README.md  pyproject.toml
apps/mcp-gateway/forge_mcp_gateway/: __init__.py  app.py  manager.py
apps/mcp-gateway/tests/: test_gateway_app.py  test_gateway_live.py  test_gateway_metrics.py  test_gateway_observability_init.py  test_manager.py
apps/worker/: README.md  pyproject.toml
apps/worker/forge_worker/: __init__.py  agent_runner.py  beat.py  celery_app.py  indexer.py  multi_agent.py  reliability.py  self_eval_run.py  syncer.py  temporal_main.py
apps/worker/tests/: test_agent_runner.py  test_agent_runner_live.py  test_approval_sla_sweep.py  test_approval_tasks.py  test_audit_tasks.py  test_auth_tasks.py  test_authz_task.py  test_automation_actions_wiring.py  test_automations.py  test_deployments.py  test_incident_flow.py  test_indexer.py  test_knowledge_mcp.py  test_marketplace_tasks.py  test_observability_tasks.py  test_pm_sync_task.py  test_reliability.py  test_run_recording.py  test_sandbox_reaper.py  test_self_eval_mint.py  test_self_eval_run.py  test_sprint_tasks.py  test_sso_tasks.py  test_syncer.py  test_temporal_main.py  test_worker_observability_init.py
infra/: main.tf  (+8 more)
(+682 files in other folders)
