[project]
name = "forge"
version = "0.1.0"
description = "Forge — OSS engineering orchestration platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-db",
    "forge-workflow",
    "forge-deploy",
    "forge-agent",
    "forge-coordinator",
    "forge-spec",
    "forge-board",
    "forge-knowledge",
    "forge-integrations",
    "forge-mcp",
    "forge-policy",
    "forge-authz",
    "forge-skill",
    "forge-eval",
    "forge-api",
    "forge-worker",
    "forge-mcp-gateway",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    # Validates the Helm chart values files against deploy/helm/forge/values.schema.json (F24).
    "jsonschema>=4.0",
    "pyyaml>=6.0",
]

# The workspace root is a virtual project: its dependencies (every member) are
# installed, but the root itself is not built or published.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["packages/ui-kit", "apps/web"]

[tool.uv.sources]
forge-contracts = { workspace = true }
forge-db = { workspace = true }
forge-workflow = { workspace = true }
forge-deploy = { workspace = true }
forge-agent = { workspace = true }
forge-coordinator = { workspace = true }
forge-spec = { workspace = true }
forge-board = { workspace = true }
forge-knowledge = { workspace = true }
forge-integrations = { workspace = true }
forge-mcp = { workspace = true }
forge-policy = { workspace = true }
forge-authz = { workspace = true }
forge-skill = { workspace = true }
forge-eval = { workspace = true }
forge-api = { workspace = true }
forge-worker = { workspace = true }
forge-mcp-gateway = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages", "apps", "deploy"]
python_files = ["test_*.py"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "postgres: test requires a live pgvector-enabled Postgres (skips if none; Phase 2)",
    "integration: test exercises multiple services together (skips if unavailable)",
    "docker: test requires a real Docker daemon + sandbox images (F19; Docker-gated CI job, opt-in via FORGE_SANDBOX_DOCKER_TESTS=1)",
    "kind: test installs the Helm chart on an ephemeral kind cluster (F24; kind+helm+docker-gated, skips if unavailable)",
]
