[project]
name = "forge"
version = "0.1.0"
description = "Forge — OSS engineering orchestration platform"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-db",
    "forge-workflow",
    "forge-deploy",
    "forge-agent",
    "forge-coordinator",
    "forge-spec",
    "forge-board",
    "forge-knowledge",
    "forge-integrations",
    "forge-mcp",
    "forge-policy",
    "forge-authz",
    "forge-auth",
    "forge-skill",
    "forge-eval",
    "forge-marketplace",
    "forge-approval",
    "forge-obs",
    "forge-api",
    "forge-worker",
    "forge-mcp-gateway",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    # Validates the Helm chart values files against deploy/helm/forge/values.schema.json (F24).
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "cyclonedx-bom>=7.3.0",
    "semgrep>=1.168.0",
    # HARD-12: single-source-of-truth versioning + conventional-commit lint +
    # SemVer bump + CHANGELOG generation. `uv run cz …` works with no global
    # install. Drives `make bump` / `make changelog` / the CI commit-lint step.
    "commitizen>=3.29",
]

# The workspace root is a virtual project: its dependencies (every member) are
# installed, but the root itself is not built or published.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["packages/ui-kit", "apps/web"]

[tool.uv.sources]
forge-contracts = { workspace = true }
forge-db = { workspace = true }
forge-workflow = { workspace = true }
forge-deploy = { workspace = true }
forge-agent = { workspace = true }
forge-coordinator = { workspace = true }
forge-spec = { workspace = true }
forge-board = { workspace = true }
forge-knowledge = { workspace = true }
forge-integrations = { workspace = true }
forge-mcp = { workspace = true }
forge-policy = { workspace = true }
forge-authz = { workspace = true }
forge-auth = { workspace = true }
forge-skill = { workspace = true }
forge-eval = { workspace = true }
forge-marketplace = { workspace = true }
forge-approval = { workspace = true }
forge-obs = { workspace = true }
forge-api = { workspace = true }
forge-worker = { workspace = true }
forge-mcp-gateway = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages", "apps", "deploy"]
python_files = ["test_*.py"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "postgres: test requires a live pgvector-enabled Postgres (skips if none; Phase 2)",
    "integration: test exercises multiple services together (skips if unavailable)",
    "live_github: live GitHub App round-trip against api.github.com (HARD-01; requires FORGE_GITHUB_* creds + network, skips otherwise so the default lane stays hermetic)",
    "realeval: honest real-corpus retrieval eval on a learned local sentence-transformers embedder (HARD-04; opt-in via FORGE_RUN_REALEVAL=1 + the 'eval' extra; skips otherwise so the default suite stays hermetic/fast)",
    "docker: test requires a real Docker daemon + sandbox images (F19; Docker-gated CI job, opt-in via FORGE_SANDBOX_DOCKER_TESTS=1)",
    "kind: test installs the Helm chart on an ephemeral kind cluster (F24; kind+helm+docker-gated, skips if unavailable)",
    "gvisor: test requires the gVisor runsc OCI runtime registered with the daemon (F34; virtualization-gated CI job)",
    "firecracker: test requires the Kata+Firecracker kata-fc runtime + /dev/kvm (F34; virtualization-gated CI job)",
    "security: enforcement-matrix + security regression tests (HARD-09; run offline, no external creds)",
    "perf: resource-heavy latency/throughput benchmark (HARD-11; skips without a runner + live PG)",
    "soak: long-running multi-tenant isolation/resource-stability run (HARD-11; skips by default)",
]

# --------------------------------------------------------------------------- #
# HARD-09 — SAST configuration (bandit). Scope: first-party source only; test
# trees are excluded (fixture secrets + asserts are deliberate there). B101
# (assert_used) is skipped globally: Forge's production images never run
# `python -O`, so asserts are not stripped, and the flagged asserts are internal
# invariants, not auth checks (triage: SECURITY_FINDINGS.md).
# --------------------------------------------------------------------------- #
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "node_modules",
    "__pycache__",
    ".git",
]
skips = ["B101"]

# --------------------------------------------------------------------------- #
# HARD-12 — Release engineering: single-source-of-truth versioning.
#
# The root ``[project].version`` above is the ONE true version (``pep621``
# provider). ``cz bump`` reads the conventional-commit history since the last
# ``v$version`` tag, computes the next SemVer, and rewrites the version in EVERY
# file listed in ``version_files`` in lockstep (all 22 member ``pyproject.toml``,
# all 22 package ``__init__.__version__``, both ``package.json``, and the compose
# ``FORGE_VERSION`` default), regenerates ``CHANGELOG.md``, commits, and tags.
#
# ``major_version_zero = true``: we are pre-1.0, so ``feat`` bumps the minor and a
# breaking change bumps the minor (not to 1.0) within the ``0.x`` line.
#
# The ``tests/test_versioning.py`` guard scans the tree for every version-bearing
# file and fails if any is missing from ``version_files`` (no silent desync).
# --------------------------------------------------------------------------- #
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true
version_files = [
    "packages/agent-runtime/pyproject.toml:^version",
    "packages/approval-sdk/pyproject.toml:^version",
    "packages/auth-sdk/pyproject.toml:^version",
    "packages/authz-sdk/pyproject.toml:^version",
    "packages/board-core/pyproject.toml:^version",
    "packages/contracts/pyproject.toml:^version",
    "packages/db/pyproject.toml:^version",
    "packages/deploy-core/pyproject.toml:^version",
    "packages/evaluation/pyproject.toml:^version",
    "packages/integration-sdk/pyproject.toml:^version",
    "packages/knowledge-core/pyproject.toml:^version",
    "packages/marketplace-sdk/pyproject.toml:^version",
    "packages/mcp-sdk/pyproject.toml:^version",
    "packages/multi-agent-coordinator/pyproject.toml:^version",
    "packages/observability/pyproject.toml:^version",
    "packages/policy-sdk/pyproject.toml:^version",
    "packages/skill-sdk/pyproject.toml:^version",
    "packages/spec-engine/pyproject.toml:^version",
    "packages/workflow-engine/pyproject.toml:^version",
    "apps/api/pyproject.toml:^version",
    "apps/worker/pyproject.toml:^version",
    "apps/mcp-gateway/pyproject.toml:^version",
    "packages/agent-runtime/forge_agent/__init__.py:__version__",
    "packages/approval-sdk/forge_approval/__init__.py:__version__",
    "packages/auth-sdk/forge_auth/__init__.py:__version__",
    "packages/authz-sdk/forge_authz/__init__.py:__version__",
    "packages/board-core/forge_board/__init__.py:__version__",
    "packages/contracts/forge_contracts/__init__.py:__version__",
    "packages/db/forge_db/__init__.py:__version__",
    "packages/deploy-core/forge_deploy/__init__.py:__version__",
    "packages/evaluation/forge_eval/__init__.py:__version__",
    "packages/integration-sdk/forge_integrations/__init__.py:__version__",
    "packages/knowledge-core/forge_knowledge/__init__.py:__version__",
    "packages/marketplace-sdk/forge_marketplace/__init__.py:__version__",
    "packages/mcp-sdk/forge_mcp/__init__.py:__version__",
    "packages/multi-agent-coordinator/forge_coordinator/__init__.py:__version__",
    "packages/observability/forge_obs/__init__.py:__version__",
    "packages/policy-sdk/forge_policy/__init__.py:__version__",
    "packages/skill-sdk/forge_skill/__init__.py:__version__",
    "packages/spec-engine/forge_spec/__init__.py:__version__",
    "packages/workflow-engine/forge_workflow/__init__.py:__version__",
    "apps/api/forge_api/__init__.py:__version__",
    "apps/worker/forge_worker/__init__.py:__version__",
    "apps/mcp-gateway/forge_mcp_gateway/__init__.py:__version__",
    "package.json:version",
    "apps/web/package.json:version",
    "deploy/docker-compose.yml:FORGE_VERSION",
]

# Keep-a-Changelog section headings: render the conventional-commit types under
# human-facing groupings (feat -> Added, fix -> Fixed, …).
[tool.commitizen.change_type_map]
feat = "Added"
fix = "Fixed"
refactor = "Changed"
perf = "Changed"
docs = "Documentation"
build = "Build"
ci = "CI"
