[project]
name = "forge-api"
version = "0.1.0"
description = "FastAPI backend application for Forge."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-db",
    "forge-board",
    "forge-knowledge",
    "forge-mcp",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "cryptography>=43",
    "httpx>=0.27",
    # Enqueue background MCP index syncs onto the worker's Celery queue (F20).
    "celery>=5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_api"]
