[project]
name = "forge-api"
version = "0.1.0"
description = "FastAPI backend application for Forge."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-db",
    "forge-board",
    "forge-knowledge",
    "forge-mcp",
    "forge-skill",
    # F32 — integration marketplace SDK (registry client, verifier, installer).
    "forge-marketplace",
    # F36 — Human Approval System SDK (unified gate service, authorizer, registry).
    "forge-approval",
    # F38 — observability & cost metrics SDK (metrics facade, cost ledger seams,
    # usage meter, structured logging).
    "forge-obs",
    # F37 — auth & secrets crypto core (envelope vault, session JWT, flat RBAC,
    # canonical secret redaction).
    "forge-auth",
    # F25 — workflow engine (FSM + Temporal V2): the /workflow router, engine
    # selection, Temporal readiness check, and the temporal bootstrap/replay CLI.
    "forge-workflow",
    # F31 — deployment gates: engine, gate evaluator, providers, health, rollback.
    "forge-deploy",
    "forge-policy",
    # F35 — benchmark suite & public leaderboard (frozen suites, deterministic
    # scoring, replay verification, ranking — the pure core the service wires).
    "forge-eval",
    # Adaptive Orchestration — complexity sizing + per-role config resolver
    # (ao-settings-api mounts the settings/routing-preview endpoints on top).
    "forge-orchestration-policy",
    # Adaptive Orchestration — the provider-agnostic tier -> model router
    # (ao-settings-api's routing-preview resolves a concrete model through it).
    "forge-agent",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "cryptography>=43",
    "httpx>=0.27",
    # Enqueue background MCP index syncs onto the worker's Celery queue (F20).
    "celery>=5.3",
    "signxml>=4",
    "lxml>=5.3",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_api"]
