[project]
name = "forge-mcp-gateway"
version = "0.1.0"
description = "MCP client manager gateway service for Forge."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-mcp",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_mcp_gateway"]
