[project]
name = "forge-mcp-gateway"
version = "0.1.0"
description = "MCP client manager gateway service for Forge."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-mcp",
    # F38 — metrics facade (forge_mcp_* emission) + telemetry init.
    "forge-obs",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_mcp_gateway"]
