[project]
name = "forge-worker"
version = "0.1.0"
description = "Celery worker application: indexer, syncer, and agent-runner tasks."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "The Forge Authors" }]
dependencies = [
    "forge-contracts",
    "forge-db",
    "forge-agent",
    "forge-knowledge",
    "forge-mcp",
    "forge-board",
    "forge-skill",
    "forge-workflow",
    # F31 — deployment gates: drive promotions/health/rollback on the worker.
    "forge-deploy",
    "celery>=5.3",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_worker"]
